--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "symfony/yaml": "^2.6",
         "symfony/process": "~2.6",
         "kherge/amend": "~3.0",
-        "phpseclib/phpseclib": "dev-master#2c96af214bf1b5e29b707249108504b4e0041a21"
+        "phpseclib/phpseclib": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.5"
